<resources>
    <string name="app_name">DescarteAqui</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Navigation Drawer Menu-->
    <string name="map_icon">Mapa</string>
    <string name="tip_icon">EcoDicas</string>
    <string name="petition_icon">Petições</string>
    <string name="account_icon">Contas</string>
    <string name="config_separator">Configurações</string>

    <!-- Filters -->
    <string name="filter_oil">Óleo</string>
    <string name="filter_battery">Eletrônico</string>
    <string name="filter_chemistry">Químico</string>
    <string name="filter_hospital">Hospitalar</string>
    <string name="filter_selective">Coleta Seletiva</string>
    <string name="filter_clear">Limpar Filtro</string>

    <!-- Facebook ID -->
    <string name="facebook_app_id">1249709945062245</string>

    <!--Google -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="loading">Loading…</string>
    <string name="server_client_id">62243537272-mp3k83uqkalgtmfjs8sensihomcfn1bl.apps.googleusercontent.com</string>

    <string-array name="cities_array">
        <item>Campina Grande</item>
    </string-array>

</resources>
