<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_map" android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map_icon" />
        <item android:id="@+id/nav_tip" android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/tip_icon" />
        <item android:id="@+id/nav_petitions" android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/petition_icon" />
    </group>

    <item android:title="@string/config_separator">
        <menu>
            <item android:id="@+id/nav_report" android:icon="@drawable/ic_show_chart_black_24dp"
                android:title="@string/report_icon" />
            <item android:id="@+id/nav_accounts" android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/account_icon" />
        </menu>
    </item>

</menu>