<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.MapFragment" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/social_floating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorFAB"
        fab:menu_colorPressed="@color/colorFABPressed"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_label="Opções de Filtro"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_location_searching_white_24dp"
        fab:menu_labels_colorNormal="#333"
        fab:menu_labels_colorPressed="#444"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#26e0e1e0"
        fab:menu_shadowRadius="3dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="true"
        android:layout_gravity="right|bottom">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_battery_charging_white_24dp"
            fab:fab_colorNormal="@color/colorFAB"
            fab:fab_colorPressed="@color/colorFABPressed"
            fab:fab_size="mini"
            fab:fab_label="@string/filter_battery"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_oil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_water_white_24dp"
            fab:fab_colorNormal="@color/colorFAB"
            fab:fab_colorPressed="@color/colorFABPressed"
            fab:fab_size="mini"
            fab:fab_label="@string/filter_oil"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_chemistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_flask_outline_white_24dp"
            fab:fab_colorNormal="@color/colorFAB"
            fab:fab_colorPressed="@color/colorFABPressed"
            fab:fab_size="mini"
            fab:fab_label="@string/filter_chemistry"/>

    </com.github.clans.fab.FloatingActionMenu>

    <ImageButton
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="11dp"
        android:id="@+id/myLocation"
        android:layout_gravity="left|bottom"
        android:src="@drawable/ic_my_location_white_24dp" />

</FrameLayout>